# RingEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: codeql-analysis.yml  main.yml  windows.yml
Engine/Source/: CMakeLists.txt  CMakePresets.json
Engine/Source/Runtime/: CMakeLists.txt  Main.cpp
Engine/Source/Runtime/Launch/: CMakeLists.txt
Engine/Source/Runtime/Launch/Private/Android/: AndroidMain.cpp
Engine/Source/Runtime/Launch/Private/Linux/: LinuxMain.cpp
Engine/Source/Runtime/Launch/Private/Mac/: MacMain.mm
Engine/Source/Runtime/Launch/Private/Windows/: WindowsMain.cpp
Engine/Source/Runtime/Launch/Public/: LaunchState.hpp  Main.hpp
Engine/Source/Runtime/Launch/Public/Android/: AndroidLaunchState.hpp
Engine/Source/Runtime/Launch/Samples/: CMakeLists.txt  Sample_Launch.cpp
Engine/Source/Runtime/Modules/: CMakeLists.txt  README.md
Engine/Source/Runtime/Modules/Core/: CMakeLists.txt
Engine/Source/Runtime/Modules/Core/Math/: CMakeLists.txt
Engine/Source/Runtime/Modules/Core/Math/Public/: Math.hpp
Engine/Source/Runtime/Modules/Core/Private/: Core.cpp
Engine/Source/Runtime/Modules/Core/Private/Android/: AndroidCore.cpp
Engine/Source/Runtime/Modules/Core/Public/: Core.hpp
Engine/Source/Runtime/Modules/Core/Public/Android/: AndroidCore.hpp
Engine/Source/Runtime/Modules/Core/Tests/: CMakeLists.txt
Engine/Source/Runtime/Modules/Core/Window/: CMakeLists.txt
Engine/Source/Runtime/Modules/Core/Window/Private/Linux/: LinuxWindow.cpp
Engine/Source/Runtime/Modules/Core/Window/Private/Windows/: WindowsWindow.cpp
Engine/Source/Runtime/Modules/Core/Window/Private/X11/: X11Window.cpp
Engine/Source/Runtime/Modules/Core/Window/Public/: ClientExtent.hpp  Window.hpp
Engine/Source/Runtime/Modules/Core/Window/Public/Linux/: LinuxWindow.hpp
Engine/Source/Runtime/Modules/Core/Window/Public/Windows/: WindowsWindow.hpp
Engine/Source/Runtime/Modules/Core/Window/Public/X11/: X11Window.hpp
Engine/Source/Runtime/Modules/Core/Window/Samples/: CMakeLists.txt  Sample_Window.cpp
Engine/Source/Runtime/Modules/Core/Window/Tests/: CMakeLists.txt  Test_ClientExtent.cpp  Test_Window.cpp  Test_WindowExtent.cpp
Engine/Source/Runtime/Modules/Private/: ModuleEntries.cpp
Engine/Source/Runtime/Modules/Public/: ModuleEntries.hpp  ModuleEntry.hpp  ModuleEntryPoint.hpp
Engine/Source/Runtime/Modules/Render/: CMakeLists.txt
Engine/Source/Runtime/Modules/Render/Private/: Render.cpp
Engine/Source/Runtime/Modules/Render/Private/GL/: GLRenderer.cpp
Engine/Source/Runtime/Modules/Render/Private/GL/EGL/: EGLContext.cpp
Engine/Source/Runtime/Modules/Render/Private/GL/GLFW/: GLFWContext.cpp
Engine/Source/Runtime/Modules/Render/Private/GL/WGL/: WGLContext.cpp
Engine/Source/Runtime/Modules/Render/Private/GL/X11/: X11Context.cpp
Engine/Source/Runtime/Modules/Render/Private/GL4/: GLRenderer.cpp
Engine/Source/Runtime/Modules/Render/Private/GL4/WGL/: WGLContext.cpp
Engine/Source/Runtime/Modules/Render/Private/GL4/X11/: X11Context.cpp
Engine/Source/Runtime/Modules/Render/Private/Vulkan/: VulkanRenderer.cpp
Engine/Source/Runtime/Modules/Render/Public/: Render.hpp  Renderer.hpp
Engine/Source/Runtime/Modules/Render/Public/GL/: GL.hpp  GLContext.hpp  GLRenderer.hpp
Engine/Source/Runtime/Modules/Render/Public/GL/EGL/: EGL.hpp  EGLContext.hpp
Engine/Source/Runtime/Modules/Render/Public/GL/GLFW/: GLFWContext.hpp
Engine/Source/Runtime/Modules/Render/Public/GL/WGL/: WGLContext.hpp
Engine/Source/Runtime/Modules/Render/Public/GL/X11/: X11Context.hpp
Engine/Source/Runtime/Modules/Render/Public/GL4/: GL.hpp  GLRenderer.hpp
Engine/Source/Runtime/Modules/Render/Public/GL4/WGL/: WGLContext.hpp
Engine/Source/Runtime/Modules/Render/Public/GL4/X11/: X11Context.hpp
Engine/Source/Runtime/Modules/Render/Public/Vulkan/: VulkanPrerequisites.hpp  VulkanRenderer.hpp
Engine/Source/Runtime/Modules/Render/Samples/: CMakeLists.txt  Sample_Render.cpp
Engine/Source/Runtime/Modules/Render/Tests/: CMakeLists.txt
Engine/Source/Runtime/Modules/Tests/: CMakeLists.txt  Test_ModuleEntries.cpp
Engine/Source/Runtime/Private/: Runtime.cpp
Engine/Source/Runtime/Public/: Runtime.hpp
Engine/Source/Runtime/Tests/: CMakeLists.txt  Test_Runtime.cpp
Engine/Source/Runtime/Window/: CMakeLists.txt
Engine/Source/Runtime/Window/Private/: ClientExtent.cpp  WindowExtent.cpp
Engine/Source/Runtime/Window/Private/Windows/: WindowsWindow.cpp
Engine/Source/Runtime/Window/Private/X11/: X11Window.cpp
Engine/Source/Runtime/Window/Public/: ClientExtent.hpp  Window.hpp  WindowExtent.hpp
Engine/Source/Runtime/Window/Public/Windows/: Windows.hpp  WindowsWindow.hpp
Engine/Source/Runtime/Window/Public/X11/: X11Window.hpp
Engine/Source/Runtime/Window/Samples/: CMakeLists.txt  Sample_Window.cpp
Engine/Source/Runtime/Window/Tests/: CMakeLists.txt  Test_ClientExtent.cpp  Test_Window.cpp  Test_WindowExtent.cpp
